fix label vertical align

--- a/scss/live-blogs.scss
+++ b/scss/live-blogs.scss
@@ -44,6 +44,7 @@
 .live-blog--status {
 	@include oTypographySansBold(xs);
 	@include oLabels();
+	vertical-align: middle;
 }
 
 .live-blog--status-pending {
